hphp/hack/test/typecheck/require_once_parse_fail3.php.exp
File "require_once_parse_fail3.php", line 3, characters 1-49:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
